--- a/references.bib
+++ b/references.bib
@@ -215,3 +215,13 @@
 	date = {2023},
 	url = {https://CRAN.R-project.org/package=googlesheets4}
 }
+
+
+@book{Rand_Comp_Analysis,
+   author = {Rand, Emma},
+   month = oct,
+   title = {{Computational Analysis for Bioscientists}},
+   url = {https://3mmarand.github.io/comp4biosci/},
+   version = {0.1},
+   year = {2023}
+}
