--- a/r4babs4/week-1/study_before_workshop.qmd
+++ b/r4babs4/week-1/study_before_workshop.qmd
@@ -16,13 +16,13 @@ Entirely optionally, you might want to review some other stage 1 content. You ca
 Stage 1
 
 -   [Data Analysis in R for Becoming a Bioscientist
-    1](https://3mmarand.github.io/R4BABS/r4babs1/r4babs1.html).Core
+    1](../../r4babs1/r4babs1.html).Core
     concepts about scientific computing, types of variable, the role of
     variables in analysis and how to use RStudio to organise analysis
     and import, summarise and plot data.
 
 -   [Data Analysis in R for Becoming a Bioscientist
-    2](https://3mmarand.github.io/R4BABS/r4babs2/r4babs2.html). The
+    2](../../r4babs2/r4babs2.html). The
     logic of hypothesis testing, confidence intervals, what is meant by
     a statistical model, two-sample tests and one- and two-way analysis
     of variance (ANOVA). 
