babs4/week-6 fix ref

--- a/r4babs4/week-6/workshop.qmd
+++ b/r4babs4/week-6/workshop.qmd
@@ -530,9 +530,9 @@ However, you may find it useful to use the latest version of those material whic
 
 Stage 1
 
--   [Data Analysis in R for Becoming a Bioscientist 1](../../r4babs1/r4babs1.html) [rand2023]. Core concepts about scientific computing, types of variable, the role of variables in analysis and how to use RStudio to organise analysis and import, summarise and plot data.
+-   [Data Analysis in R for Becoming a Bioscientist 1](../../r4babs1/r4babs1.html) [@rand2023]. Core concepts about scientific computing, types of variable, the role of variables in analysis and how to use RStudio to organise analysis and import, summarise and plot data.
 
--   [Data Analysis in R for Becoming a Bioscientist 2](../../r4babs2/r4babs2.html) [rand2023]. The logic of hypothesis testing, confidence intervals, what is meant by a statistical model, two-sample tests and one- and two-way analysis of variance (ANOVA).
+-   [Data Analysis in R for Becoming a Bioscientist 2](../../r4babs2/r4babs2.html) [@rand2023]. The logic of hypothesis testing, confidence intervals, what is meant by a statistical model, two-sample tests and one- and two-way analysis of variance (ANOVA).
 
 -   Supporting book [Computational Analysis for Bioscientists](https://3mmarand.github.io/comp4biosci/) [@Rand_Comp_Analysis]
 
