--- a/r4babs1/week-6/study_before_workshop.qmd
+++ b/r4babs1/week-6/study_before_workshop.qmd
@@ -5,9 +5,18 @@ toc: true
 toc-location: right
 ---
 
-1.  Join the video conference Intro: Data Handling - BIO00027C-A (Lecture) on your timetable
+1.  📖 If you have not done so already, read 
+    [An overview of Data Analysis in R for BABS in your degree](../../index.qmd) 
+    and [An overview of Data Analysis in R for BABS 1](../r4babs1.qmd). Both are also 
+    linked on the VLE.
 
-2.  Read [What they forgot to teach you about computers](https://3mmarand.github.io/comp4biosci/what_they_forgot.html) in [Computational Analysis for Bioscientists](https://3mmarand.github.io/comp4biosci/)
+2.  📖 Read [What they forgot to teach you about computers](https://3mmarand.github.io/comp4biosci/what_they_forgot.html) in [Computational Analysis for Bioscientists](https://3mmarand.github.io/comp4biosci/)
 
-3.  Read [What are R and Rstudio?](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#what-are-r-and-rstudio). You only need to read *this* section, you do not need to the read the rest of the chapter (yet!)
+3.  📖 Read [What are R and Rstudio?](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#what-are-r-and-rstudio). 
+    You only need to read *this* section, you do not need to the read the
+    rest of the chapter (yet!)
 
+4.  🖥️ Join the video conference Intro: Data Handling - BIO00027C-A (Lecture) 
+    on your timetable. The main purpose of this session is to highlight how
+    Data Analysis in R for BABS 1 is organised and give you an opportunity to 
+    ask questions.
