--- a/r4babs1/week-6/study_after_workshop.qmd
+++ b/r4babs1/week-6/study_after_workshop.qmd
@@ -6,4 +6,5 @@ toc-location: right
 ---
 
 
-There is no additional study this week but you may want to look ahead to next week.
+There is no additional study this week but you may want to look 
+ahead to next week.
