--- a/r4babs1/week-6/workshop.qmd
+++ b/r4babs1/week-6/workshop.qmd
@@ -5,8 +5,43 @@ toc: true
 toc-location: right
 ---
 
-There is no formal workshop this week but you might want to install R and RStudio on your own machine. This is optional because University computers already have R and RStudio installed.
+There is no formal workshop this week but I recommend setting yourself up to
+work from home
 
-[Install R and RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#installing-r-and-rstudio).
+1.  💻 Set up the Virtual Desktop. I very strongly recommend working on 
+    the University computers for this work. You will be using more specialised 
+    R packages than you might be used to. This is especially important 
+    if you often have difficulty updating and or installing software on 
+    your own machine, wouldn't know what what version of R you are using 
+    or don't realise there is a difference between R and RStudio. 
+    The uni machines always have up-to-date R and R packages and all 
+    the packages that appear in teaching materials. You can still work 
+    from home by using the
+    [Virtual Desktop Service](https://www.york.ac.uk/it-services/tools/vds/). 
+    The VDS allows you to log on to a university computer from your 
+    own computer. It means you can access all software and filestores. 
+    When using the VDS for R and RStudio, it usually makes sense to use 
+    other software - such as a browser or file explorer - also through the VDS.
+    If you are confident in your ability to set up your own machine, you 
+    need:
+    
+    -   to know there is a 
+        [difference between R and RStudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#what-are-r-and-rstudio)
+    -   [Install R and Rstudio](https://3mmarand.github.io/comp4biosci/first_steps_rstudio.html#installing-r-and-rstudio)
+    -   to using R 4.4 and RStudio 2024.09.0 Build 375 ("Cranberry Hibiscus")
+    -   be certain you are actually using R 4.4 - it is written in the top edge
+        of the console window. By default RStudio uses the latest version on 
+        R on your machine. 
 
-Note you need a computer - not a tablet.
+    It is possible to access all your files on your university account without 
+    using the VDS. For example, if you want to work on uni machines at uni 
+    and your machine at home. You can best do this by mapping a drive:      
+    https://support.york.ac.uk/s/topic/0TO4K000000lA5ZWAU/filestores.
+    If you store everything on google drive you can also read/write to that 
+    like any other drive using google drive app.
+
+
+Even if you plan to use your own machine I really recommend you take 
+the time to set the VDS up now while you're not time pressured so you 
+always have that option ready.
+
